// Vitest Snapshot v1

exports[`BaseCheckbox > should match snapshot with props 1`] = `
<label
  class="checkbox-container"
  data-v-4f6a8895=""
  data-v-inspector-column="3"
  data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseCheckbox.vue"
  data-v-inspector-line="2"
  data-v-inspector-title="BaseCheckbox.vue"
  style="display: block; padding-left: 30px;"
  value="true"
>
  
  
  <input
    class="checkmark-input"
    data-v-4f6a8895=""
    data-v-inspector-column="5"
    data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseCheckbox.vue"
    data-v-inspector-line="4"
    data-v-inspector-title="BaseCheckbox.vue"
    type="checkbox"
  />
  <span
    class="checkmark"
    data-v-4f6a8895=""
    data-v-inspector-column="5"
    data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseCheckbox.vue"
    data-v-inspector-line="15"
    data-v-inspector-title="BaseCheckbox.vue"
    style="top: 0px; left: 0px;"
  />
</label>
`;

exports[`BaseCheckbox > should render correctly and match snapshot 1`] = `
<label
  class="checkbox-container"
  data-v-4f6a8895=""
  data-v-inspector-column="3"
  data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseCheckbox.vue"
  data-v-inspector-line="2"
  data-v-inspector-title="BaseCheckbox.vue"
  style="display: block; padding-left: 30px;"
>
  
  
  <input
    class="checkmark-input"
    data-v-4f6a8895=""
    data-v-inspector-column="5"
    data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseCheckbox.vue"
    data-v-inspector-line="4"
    data-v-inspector-title="BaseCheckbox.vue"
    type="checkbox"
  />
  <span
    class="checkmark"
    data-v-4f6a8895=""
    data-v-inspector-column="5"
    data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseCheckbox.vue"
    data-v-inspector-line="15"
    data-v-inspector-title="BaseCheckbox.vue"
    style="top: 0px; left: 0px;"
  />
</label>
`;
